# zmk-config

./: .gitignore  Justfile  build.yaml  flake.nix  readme.md
.github/workflows/: build-totp-companion.yml  build.yml  test-build-env.yml
config/: base.keymap  combos.dtsi  keyball39.conf  keyball39.json  keyball39.keymap  west.yml
config/boards/shields/keyball_nano/: CMakeLists.txt  behavior_totp.c  keyball39_right.conf  keyball39_right.overlay  status_screen_custom.c  totp.c  totp.h  widget_layer_or_totp.c  widget_layer_or_totp.h
config/dts/bindings/behaviors/: zmk,behavior-totp.yaml
draw/: config.yaml
tools/totp-companion/: Cargo.toml  Cross.toml  README.md
tools/totp-companion/src/: ble.rs  commands.rs  main.rs  protocol.rs
